# docstring-checker

./: .gitignore  .pre-commit-hooks.yaml  setup.cfg
src/: docstring_checker.py
testing/: util.py
testing/resources/: function_with_docstring.py  function_without_docstring.py
tests/: docstring_checker_test.py
