# setup.cfg
[metadata]
name = docstring-checker
description = check function contains docstring
version = 0.1.0
author = Sam Yang
author_email = sam.yang@kkday.com
license = MIT


[options]
packages = find:

[options.entry_points]
console_scripts =
    docstring-checker = docstring_checkoer.main:main