# setup.cfg
[metadata]
name = docstring-checker
description = check function contains docstring
version = 0.1.0
author = Sam Yang
author_email = sam.yang@kkday.com
license = MIT
url = https://github.com/samdotyang/docstring-checker


[options]
packages = find:

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    docstring-checker = docstring_checker.docstring_checker:main